--- a/package.json
+++ b/package.json
@@ -4,12 +4,29 @@
   "private": true,
   "scripts": {
     "server": "json-server --watch db.json --port 4000",
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@progress/kendo-drawing": "^1.18.0",
+    "@progress/kendo-licensing": "^1.3.3",
+    "@progress/kendo-react-buttons": "^6.0.2",
+    "@progress/kendo-react-dialogs": "^6.0.2",
+    "@progress/kendo-react-dropdowns": "^6.0.2",
+    "@progress/kendo-react-editor": "^6.0.2",
+    "@progress/kendo-react-grid": "^6.1.0",
+    "@progress/kendo-react-inputs": "^6.0.2",
+    "@progress/kendo-react-intl": "^6.0.2",
+    "@progress/kendo-react-layout": "^6.0.2",
+    "@progress/kendo-react-pdf": "^6.0.2",
+    "@progress/kendo-react-popup": "^6.0.2",
+    "@progress/kendo-react-progressbars": "^6.0.2",
+    "@progress/kendo-react-treelist": "^6.0.2",
+    "@progress/kendo-react-treeview": "^6.0.2",
+    "@progress/kendo-svg-icons": "^2.0.0",
+    "@progress/kendo-theme-default": "^7.0.1",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18"
