--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@progress/kendo-theme-default": "^7.0.1",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.4.5"
   },
   "devDependencies": {
     "@types/node": "20.5.1",
